[package]
name = "blue-rs"
version = "0.1.0"
authors = ["Emil Hammarstrom <emil.a.hammarstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }

[[bin]]
name = "blue-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies.stm32f1]
version = "0.12.1"
features = ["stm32f103", "rt"]
